# VecFlow

./: .gitignore  README.md  Result.txt  plot.py
cpp/: CMakeLists.txt
cpp/include/cuvs/neighbors/: cagra.hpp  common.hpp  filtered_bfs.hpp  shared_resources.hpp  vecflow.hpp
cpp/src/neighbors/: cagra.cuh  cagra_filtered_search_float.cu  cagra_filtered_search_half.cu  cagra_filtered_search_int8.cu  cagra_filtered_search_uint8.cu
cpp/src/neighbors/detail/cagra/: cagra_build.cuh  cagra_search.cuh  device_common.hpp  factory.cuh  filtered_search_single_cta.cuh  filtered_search_single_cta_00_generate.py  filtered_search_single_cta_float_uint32.cu  filtered_search_single_cta_half_uint32.cu  filtered_search_single_cta_inst.cuh  filtered_search_single_cta_int8_uint32.cu  filtered_search_single_cta_kernel-inl.cuh  filtered_search_single_cta_kernel.cuh  filtered_search_single_cta_uint8_uint32.cu  graph_core.cuh  search_multi_cta.cuh  search_multi_cta_00_generate.py  search_multi_cta_float_uint32.cu  search_multi_cta_half_uint32.cu  search_multi_cta_int8_uint32.cu  search_multi_cta_uint8_uint32.cu  search_multi_kernel.cuh  search_plan.cuh  search_single_cta.cuh  search_single_cta_00_generate.py  search_single_cta_float_uint32.cu  search_single_cta_half_uint32.cu  search_single_cta_int8_uint32.cu  search_single_cta_uint8_uint32.cu  topk_by_radix.cuh
cpp/src/neighbors/filtered_bfs/: build_filtered_bfs.cuh  build_filtered_ivf.cuh  search_filtered_bfs.cuh  search_filtered_ivf.cuh
cpp/src/neighbors/filtered_bfs/detail/: build_filtered_bfs_00_generate.py  build_filtered_bfs_float.cu  build_filtered_bfs_int8_t.cu  build_filtered_bfs_uint8_t.cu  build_filtered_ivf_00_generate.py  build_filtered_ivf_float.cu  build_filtered_ivf_half.cu  build_filtered_ivf_int8_t.cu  build_filtered_ivf_uint8_t.cu  search_filtered_bfs_00_generate.py  search_filtered_bfs_float.cu  search_filtered_bfs_int8_t.cu  search_filtered_bfs_uint8_t.cu  search_filtered_ivf_00_generate.py  search_filtered_ivf_float.cu  search_filtered_ivf_half.cu  search_filtered_ivf_int8_t.cu  search_filtered_ivf_uint8_t.cu
cpp/src/neighbors/ivf_flat/: ivf_flat_build.cuh
cpp/src/neighbors/vecflow/: vecflow_build.cuh  vecflow_common.cuh  vecflow_search.cuh
cpp/src/neighbors/vecflow/detail/: build_00_generate.py  build_vecflow_float.cu  build_vecflow_int8_t.cu  search_00_generate.py  search_vecflow_float.cu  search_vecflow_int8_t.cu
examples/cpp/: CMakeLists.txt
examples/cpp/src/: cagra_filter.cu  cagra_filter_bench.cu  cagra_filter_test.cu  cagra_filter_yfcc.cu  cagra_hybrid.cu  cagra_persistent_example.cu  cagra_subgraph.cu  common copy.cuh  common.cuh  filtered_bfs_bench.cu  filtered_bfs_test.cu  filtered_bfs_yfcc.cu  generate_gt_yfcc.cu  merge_topk.cuh  query_specificities.txt  utils.h
examples/cpp/src/bench/: README.md  build_sift.cu  build_wiki.cu  search_cagra_if_sift.cu  search_cagra_if_yfcc.cu  search_cagra_sift.cu  search_cagra_wiki.cu  search_cagra_yfcc.cu  search_ls_yfcc_single.cu
examples/cpp/src/vecflow/: build_sift.cu  common.cuh  vecflow.cu  vecflow_test.cu
vecflow/: CMakeLists.txt  README.md  setup.py
vecflow/binding/: binding.cpp
vecflow/example/: test.py
vecflow/examples/: README.md
vecflow/examples/cpp/: CMakeLists.txt
vecflow/examples/cpp/src/: common.cuh  config.json  vecflow_example.cu
vecflow/examples/cpp/src/bench/: README.md  config.json  vecflow_bench.cu
vecflow/examples/python/: config.json  vecflow_example.py
vecflow/include/: vecflow.hpp
vecflow/src/: common.cuh  vecflow.cu
vecflow/vecflow/: __init__.py
